--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 = MagLev Change Log
+
+== Changes for 23234  2010-04-09
  
 * Fix Trac 700, 702, 703, 705
+* Fix problems in Linenoise after ctrl-Z / fg
+* Numerous improvements in underlying GemStone 3.0 system.
+* Implement ObjectSpace#loaded_classes
 
 == Changes for 23191  2010-04-06
 
