--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
 = MagLev Change Log
 
-== Changes for 23251  2010-04-13
+== Changes for 23252  2010-04-13
 
-* Fix Trac 707, 708, 709
+* Fix Trac 707, 708, 709, 712
 * More changes in underlying GemStone 3.0 system
 
 == Changes for 23245  2010-04-12
