--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
 == Changes for 23252  2010-04-13
 
-* Fix Trac 707, 708, 709, 712
+* Fix Trac 707, 708, 709, 712, 713
 * More changes in underlying GemStone 3.0 system
 
 == Changes for 23245  2010-04-12
