Retagged language specs

--- a/spec/tags/frozen/language/block_tags.txt
+++ b/spec/tags/frozen/language/block_tags.txt
@@ -1,2 +1,1 @@
-fails:Block parameters assign to local variable
-fails:Block parameters captures variables from the outer scope
+fails:A block with mismatched arguments raises ArgumentError if argument is passed, but the block takes none
