--- a/spec/tags/frozen/language/defined_tags.txt
+++ b/spec/tags/frozen/language/defined_tags.txt
@@ -1,4 +1,70 @@
-fails:The defined? keyword returns 'local-variable' when x = 1; defined?(x) is sent
-fails:The defined? keyword returns nil for defined?(super) when a superclass undef's the method
-fails:The defined? keyword returns 'yield' when there is a block to yield to and defined?(yield) is sent
-fails:The defined? keyword returns 'local-variable(in-block)' when defined? is called on a block var
+fails:The defined? keyword when called with a method name having a module as receiver returns nil if the method is private
+fails:The defined? keyword for an expression returns 'assignment' for assigning multiple variables
+fails:The defined? keyword for an expression returns nil for an expression with != and an undefined method
+fails:The defined? keyword for an expression returns nil for an expression with !~ and an undefined method
+fails:The defined? keyword for an expression returns nil for an expression with 'not' and an undefined method
+fails:The defined? keyword for an expression returns nil for an expression with 'not' and an unset class variable
+fails:The defined? keyword for an expression does not propagate an exception raised by a method in a 'not' expression
+fails:The defined? keyword for an expression calls a method in a 'not' expression and returns 'expression'
+fails:The defined? keyword for an expression returns nil for an expression with '!' and an undefined method
+fails:The defined? keyword for an expression returns nil for an expression with '!' and an unset class variable
+fails:The defined? keyword for an expression with a dynamic String returns nil when the String contains a call to an undefined method
+fails:The defined? keyword for an expression with a dynamic String calls the method in the String
+fails:The defined? keyword for an expression with a dynamic String returns nil if any of the interpolated method calls are undefined
+fails:The defined? keyword for an expression with a dynamic String returns nil and stops processing if any of the interpolated method calls are undefined
+fails:The defined? keyword for an expression with a dynamic Regexp returns nil when the Regexp contains a call to an undefined method
+fails:The defined? keyword for an expression with a dynamic Regexp calls the method in the Regexp
+fails:The defined? keyword for an expression with a dynamic Regexp returns nil if any of the interpolated method calls are undefined
+fails:The defined? keyword for an expression with a dynamic Regexp returns nil and stops processing if any of the interpolated method calls are undefined
+fails:The defined? keyword for variables returns 'global-variable' for $!
+fails:The defined? keyword for variables returns 'global-variable for $~
+fails:The defined? keyword for variables returns 'local-variable(in-block)' when called with the name of a block local
+fails:The defined? keyword for variables when a String does not match a Regexp returns 'global-variable' for $~
+fails:The defined? keyword for variables when a String does not match a Regexp returns nil for $&
+fails:The defined? keyword for variables when a String does not match a Regexp returns nil for $`
+fails:The defined? keyword for variables when a String does not match a Regexp returns nil for $'
+fails:The defined? keyword for variables when a String does not match a Regexp returns nil for $+
+fails:The defined? keyword for variables when a String does not match a Regexp returns nil for $1-$9
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for $~
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for $&
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for $`
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for $'
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for $+
+fails:The defined? keyword for variables when a String matches a Regexp returns 'global-variable' for the capture references
+fails:The defined? keyword for variables when a String matches a Regexp returns nil for non-captures
+fails:The defined? keyword for variables when a Regexp does not match a String returns 'global-variable' for $~
+fails:The defined? keyword for variables when a Regexp does not match a String returns nil for $&
+fails:The defined? keyword for variables when a Regexp does not match a String returns nil for $`
+fails:The defined? keyword for variables when a Regexp does not match a String returns nil for $'
+fails:The defined? keyword for variables when a Regexp does not match a String returns nil for $+
+fails:The defined? keyword for variables when a Regexp does not match a String returns nil for $1-$9
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for $~
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for $&
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for $`
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for $'
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for $+
+fails:The defined? keyword for variables when a Regexp matches a String returns 'global-variable' for the capture references
+fails:The defined? keyword for variables when a Regexp matches a String returns nil for non-captures
+fails:The defined? keyword for a scoped constant calls .const_missing if the parent to the constant is not defined
+fails:The defined? keyword for a scoped constant calls .const_missing for the parent and uses the return constant for scope
+fails:The defined? keyword for a scoped constant when the scope chain has undefined constants calls .const_missing for each constant in the scope chain and returns nil if any are not defined
+fails:The defined? keyword for a scoped constant when the scope chain has undefined constants calls .const_missing and returns 'constant' if all constants are defined
+fails:The defined? keyword for a top-level scoped constant calls .const_missing if the constant is not defined
+fails:The defined? keyword for a top-level scoped constant calls .const_missing and uses the return constant for scope
+fails:The defined? keyword for a top-level scoped constant when the scope chain has undefined constants calls .const_missing for each constant in the scope chain and returns nil if any are not defined
+fails:The defined? keyword for a top-level scoped constant when the scope chain has undefined constants calls .const_missing and returns 'constant' if all constants are defined
+fails:The defined? keyword for a module method call scoped constant returns nil if the outer scope constant in the receiver is not defined
+fails:The defined? keyword for a module method call scoped constant returns nil if the scoped constant in the receiver is not defined
+fails:The defined? keyword for yield returns nil if no block is passed to a method not taking a block parameter
+fails:The defined? keyword for yield returns nil if no block is passed to a method taking a block parameter
+fails:The defined? keyword for yield returns 'yield' if a block is passed to a method not taking a block parameter
+fails:The defined? keyword for yield returns 'yield' if a block is passed to a method taking a block parameter
+fails:The defined? keyword for super returns nil when a superclass undef's the method
+fails:The defined? keyword for super for a method taking no arguments returns nil when no superclass method exists
+fails:The defined? keyword for super for a method taking no arguments returns nil from a block when no superclass method exists
+fails:The defined? keyword for super for a method taking no arguments returns nil from a #define_method when no superclass method exists
+fails:The defined? keyword for super for a method taking no arguments returns nil from a block in a #define_method when no superclass method exists
+fails:The defined? keyword for super for a method taking arguments returns nil when no superclass method exists
+fails:The defined? keyword for super for a method taking arguments returns nil from a block when no superclass method exists
+fails:The defined? keyword for super for a method taking arguments returns nil from a #define_method when no superclass method exists
+fails:The defined? keyword for super for a method taking arguments returns nil from a block in a #define_method when no superclass method exists
