--- a/spec/tags/frozen/language/eigenclass_tags.txt
+++ b/spec/tags/frozen/language/eigenclass_tags.txt
@@ -5,6 +5,6 @@ fails:Instance methods of an eigenclass does not include class methods of the me
 fails:Instance methods of an eigenclass includes instance methods of the metaclass of Class, for a metaclass
 fails:Instance methods of an eigenclass does not include class methods of the metaclass of Class, for a metaclass
 fails:Class methods of an eigenclass includes ones of the object's class
+fails:Class methods of an eigenclass includes instance methods of Class, for a class
 fails:Class methods of an eigenclass includes class methods of Class, for a class
 fails:Class methods of an eigenclass includes instance methods of the metaclass of Class, for a class
-fails:Class methods of an eigenclass does not include class methods of the metaclass of Class, for a class
