--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 = MagLev Change Log
 
-* Fix Trac 716, 718, 719
+* Fix Trac 716, 718, 719, 720
   Signal.trap will raise MNU for now.
 
 == Changes for 23275  2010-04-16
