--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 = MagLev Change Log
 
+* Fix Trac 738
+
 == Changes for 23464  2010-05-07
 
 * Add Add multi-threaded mfc, fdc, epoch & wsUnionSweep to underlying GemStone 3.0 system
