--- a/src/experimental/web/README.rdoc
+++ b/src/experimental/web/README.rdoc
@@ -32,3 +32,24 @@ a web environment.  In three separate shells:
   $ rake server                # start lighttpd talking to scgi
   $ rake abprof                # profile maglev
 
+
+== Configuration
+
+=== IPV4 vs IPV6 issues
+
+lighttpd supports ipv6, but the mod_scgi plugin doesn't seem to support it,
+so the ruby SCGI server needs to open an IPV4 socket for SCGI
+communications.  By default in MRI, Rack::Handler::SCGI is opening an IPV6
+socket on localhost.  I believe it is because the getaddrinfo sys call is
+returning an ipv6 address first on my mac:
+
+   p Socket.getaddrinfo("localhost", 4567)
+   [["AF_INET6", 4567, "localhost", "::1", 30, 2, 17],
+    ["AF_INET6", 4567, "localhost", "::1", 30, 1, 6],
+    ["AF_INET6", 4567, "localhost", "fe80::1%lo0", 30, 2, 17],
+    ["AF_INET6", 4567, "localhost", "fe80::1%lo0", 30, 1, 6],
+    ["AF_INET", 4567, "localhost", "127.0.0.1", 2, 2, 17],
+    ["AF_INET", 4567, "localhost", "127.0.0.1", 2, 1, 6]]
+
+As a workaround, in rack_app.rb, I explicitly open an
+IPV4 tcp server socket and pass it into Rack.
