--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 = MagLev Change Log
 
+* new topaz commands   whr, upr, downr  for easier  Ruby debugging.
+* implement  source_location  methods
+
 == Changes for 23569  2010-06-01
 
 * Update to RubyGems 1.3.7
