--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 = MagLev Change Log
 
+* fix Trac 746
+* fix object corruption in Regexp primitives .
+* securerandom passes specs
 * implement Tempfile to fix Trac 644
+* enhance topaz   rubylookup   to automatically traverse bridge methods
+* fixes to topaz   whr, upr, downr  commands
+* fixes to yaml and securerandom 
 
 == Changes for 23577  2010-06-03
 
