--- a/src/experimental/rails3/README
+++ b/src/experimental/rails3/README
@@ -4,7 +4,7 @@
 
 You'll need to install some gems:
 
-  $ maglev-gem install i18n rack-mount rack multimap arel
+  $ maglev-gem install i18n rack-mount rack arel erubis
 
 Then you can just do "rake" to run the tests.
 To run the rails app, do "rake app"
