--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 
 * topaz   whr, upr, downr   no longer display bridge methods
 * add topaz commands   whrb, uprb, downrb   which include bridge methods
+* Fix Trac 747
 
 == Changes for 23611  2010-06-12
 
