--- a/examples/rails/README.rdoc
+++ b/examples/rails/README.rdoc
@@ -3,39 +3,41 @@
 ## Pre-Requisites
 
 Before you can run the example rails app, you need certain gems and a
-patched copy of Rails.  To get them:
+patched copy of Rails.  To get them, you need to do (one time only):
 
   $ rake checkout
   $ rake gems
 
-You'll need to ensure the following gems have been installed:
-
-  $ maglev-gem install i18n rack-mount rack arel erubis
-
-Then, you'll need to checkout a local copy of Rails 3, with the MagLev
-patches:
-
-  $ rake checkout
-
-And finally, you should be able to run rails
+## Run Rails on soft, cushy, Magnetic Levitation goodness:
 
   $ rake app
 
-See the +Rakefile+ for other tasks.
-
-
 ## Changes to run with MagLev
 
-### Creating the Sample App
+At this point, ActiveRecord doesn't seem to load under MagLev (suspect the
+root cause is that we don't have a worthy DB driver).
+
+### Changes to +myapp+
+
+The following section outlines the changes needed to the standard sample
+app in order to run under MagLev.
 
 * The rails script currently does not run under MagLev.  MRI 1.8.7 was used
   to create +myapp+ with the following command:
 
     $ ruby $MAGLEV_HOME/examples/rails/rails/bin/rails new myapp --dev
 
-* <tt>myapp/Gemfile</tt> was tweaked to use ENV['MAGLEV_HOME'] as a path
-  prefix and comment out the sqlite3 gem.
+* <tt>myapp/Gemfile</tt> was tweaked to use <tt>ENV['MAGLEV_HOME']</tt> as
+  a path prefix and comment out the sqlite3 gem.
 
-* <tt>myapp/config/application.rb</tt> was edited.  <tt>require
-  'rails/all'</tt> was replaced by a list of require statements, excluding
+* <tt>myapp/config/application.rb</tt> was edited to replace <tt>require
+  'rails/all'</tt> with a list of require statements, excluding
   +ActiveRecord+.
+
+### Changes to Rails Code
+
+The changes to the rails code are rather minimal.  To get a good look:
+
+  $ rake checkout && cd rails && git diff maglev-beta4 v3.0.0.beta4
+
+
