--- a/examples/rails/README.rdoc
+++ b/examples/rails/README.rdoc
@@ -8,19 +8,18 @@ patched copy of Rails.  To get them, you need to do (one time only):
   $ rake checkout
   $ rake gems
 
-## Run Rails on soft, cushy, Magnetic Levitation goodness:
+You will also need a working copy of git.
+
+## Run Rails with MagLev
 
   $ rake app
 
-## Changes to run with MagLev
+  Then hit http://localhost:3000/
 
-At this point, ActiveRecord doesn't seem to load under MagLev (suspect the
-root cause is that we don't have a worthy DB driver).
+## Changes to +myapp+
 
-### Changes to +myapp+
-
-The following section outlines the changes needed to the standard sample
-app in order to run under MagLev.
+These are the changes to the standard sample app in order to run under
+MagLev:
 
 * The rails script currently does not run under MagLev.  MRI 1.8.7 was used
   to create +myapp+ with the following command:
@@ -32,7 +31,10 @@ app in order to run under MagLev.
 
 * <tt>myapp/config/application.rb</tt> was edited to replace <tt>require
   'rails/all'</tt> with a list of require statements, excluding
-  +ActiveRecord+.
+  +ActiveRecord+. ActiveRecord doesn't seem to load under MagLev (we
+  suspect the root cause is that we don't have a worthy DB driver, rails
+  eats the exception, then continues loading, but not all pre-requisites
+  are loaded, due to swallowed exception).
 
 ### Changes to Rails Code
 
@@ -40,4 +42,6 @@ The changes to the rails code are rather minimal.  To get a good look:
 
   $ rake checkout && cd rails && git diff maglev-beta4 v3.0.0.beta4
 
-
+You must pass the <tt>-MallIvsDynamic</tt> flag to MagLev in order to run
+rails (the +Rakefile+ does this).  See docs/release_notes for a discussion
+of <tt>-MallIvsDynamic</tt>.
