--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 = MagLev Change Log
 
-* Fix Trac 706, 750, 751, 752
+* Fix Trac 706, 750, 751, 752, 753
 * fix code generation for   else   of a begin/rescue/else
 * Signal#trap can now trap SIGTERM 
 
