--- a/examples/mysql/README.rdoc
+++ b/examples/mysql/README.rdoc
@@ -1,8 +1,15 @@
 = MagLev and MySQL
 
-MagLev ships with a copy of the pure ruby MySQL driver in the
-<code>lib/ruby/site_ruby/1.8/ruby-mysql</code> directory.  The script in
-this directory demonstrates how to connect MagLev to MySQL using driver.
+To use MySQL, install the ruby-mysql gem:
+
+  $ maglev-gem install ruby-mysql -v 2.9.2
+
+and then put the following in your code
+
+  gem 'ruby-mysql', '= 2.9.2'
+  require 'mysql'
+
+You will also have to run MagLev with the -MallIvsDynamic flag.
 
 == Setup
 
@@ -14,14 +21,17 @@ configuration section of <code>mysql.rb</code> to reflect your setup:
   user = 'webuser'
   pass = 'webuser'
 
-If you are running MySQL5, you may have problems with old style
-authentication.  See http://dev.mysql.com/doc/refman/5.1/en/old-client.html
-for workarounds
+If you get errors trying to connect to /tmp/mysql.sock, you may need to
+tell the driver where the mysqld UNIX domain socket is.  The
+MYSQL_UNIX_PORT environment variable controls this, e.g.,
+
+  $ export MYSQL_UNIX_PORT='/opt/local/var/run/mysql5/mysqld.sock'
+  $ rake
 
 == Run
 
 To run, just use rake:
-  
+
   $ rake
   (in /Users/pmclain/GemStone/checkouts/git/examples/mysql)
   maglev-ruby mysql.rb
@@ -35,3 +45,12 @@ To run, just use rake:
   Database test_db dropped
   Connection closed
 
+== Deprecated
+
+MagLev ships with a copy of the pure ruby MySQL driver in the
+<code>lib/ruby/site_ruby/1.8/ruby-mysql</code> directory.  This version is
+now deprecated.  Please use the rubygems version cited above.
+
+With the deprecated version, if you are running MySQL5, you may have
+problems with old style authentication.  See
+http://dev.mysql.com/doc/refman/5.1/en/old-client.html for workarounds
