--- a/examples/rails/README.rdoc
+++ b/examples/rails/README.rdoc
@@ -1,4 +1,4 @@
-# Notes on MagLev and Rails 3
+= Notes on MagLev and Rails 3
 
 The files in this directory allow you to run the default Rails app on
 MagLev.  Currently, MagLev is able to serve static and (simple) dynamic
@@ -6,51 +6,55 @@ pages using a patched version of Rails 3 Beta 4.  The <tt>Rakefile</tt>
 provides tasks to setup your MagLev environment with the correct (patched)
 gems.
 
-## Quick Start
+== Quick Start
 
-Make sure the MagLev repository is running:
+1. Make sure the MagLev repository is running:
+     $ cd $MAGLEV_HOME
+     $ rake maglev:start      # or: $MAGLEV_HOME/bin/maglev start
 
-  $ cd $MAGLEV_HOME
-  $ rake maglev:start      # or: $MAGLEV_HOME/bin/maglev start
+2. Install Rails, patch it and install other gems
+     $ cd $MAGLEV_HOME/examples/rails
+     $ rake init
 
-Then install gems, rails and patch rails:
-
-  $ cd $MAGLEV_HOME/examples/rails
-  $ rake init
-
-To run the app:
-
-  $ rake app
-
+3. Run the app:
+     $ rake app
   Then hit http://localhost:3000/
 
-## MagLev + Rails status
+== Rails on MagLev: Status
 
 There is still a lot of work before Rails on MagLev is fully cooked.  You
-should expect a few spurious error messages and some errors (especially in
+should expect some spurious error messages and errors (especially in
 logging) that do not affect page loading.  We fully expect there to be
 other bugs as pages get more complex and as you add more gems use other
 features.
 
-When running the app, there will be a couple of long pauses early on.  One
-before you see the output indicating Rails has started:
+=== ActiveRecord
+
+Currently, ActiveRecord does not work.  We are working getting a worthy db
+driver. See the example for how to configure around loading of
+ActiveRecord. 
+
+=== Slow start up
+
+There are a couple of pauses when starting rails and when loading the first
+page.  The first pause is loading and compiling all the rails code:
 
   <long pause>
   [2010-06-24 12:54:37] INFO  WEBrick 1.3.1
   [2010-06-24 12:54:37] INFO  ruby 1.8.7 (2010-02-26) [x86_64-darwin]
   [2010-06-24 12:54:37] INFO  WEBrick::HTTPServer#start: pid=45167 port=3000
 
-And there will be another long pause when you hit the first dynamic page.
-Both of these pauses are due to MagLev parsing and compiling Ruby code.
-Subsequent dynamic page loads should be much quicker, as MagLev only has to
-compile the code at startup.
+The second pause occurs when you hit the first dynamic page.  Both of these
+pauses are due to MagLev parsing and compiling Ruby code.  Subsequent
+dynamic page loads should be much quicker, as MagLev only has to compile
+the code at startup.
 
 If you are interested in seeing the progress of file loads, you can set the
 following environment variable before starting the Rails app:
 
   export MAGLEV_OPTS="-MtraceLoad"
 
-## Changes to +myapp+
+== Changes to +myapp+
 
 These are the changes to the standard sample app in order to run under
 MagLev:
@@ -73,7 +77,7 @@ MagLev:
   eats the exception, then continues loading, but not all pre-requisites
   are loaded, due to swallowed exception).
 
-### Changes to Rails Code
+=== Changes to Rails Code
 
 The changes to the rails code are rather minimal.  To get a good look:
 
@@ -82,10 +86,11 @@ The changes to the rails code are rather minimal.  To get a good look:
 or browse to: http://github.com/MagLev/rails/compare/master...maglev-beta4
 
 You must pass the <tt>-MallIvsDynamic</tt> flag to MagLev in order to run
-rails (the +Rakefile+ does this).  See docs/release_notes for a discussion
-of <tt>-MallIvsDynamic</tt>.
+rails (the +Rakefile+ does this).  See
+<tt>docs/release_notes</tt>[link:files/docs/release_notes.html] for a
+discussion of <tt>-MallIvsDynamic</tt>.
 
-## Alternate rails patch option
+== Alternate rails patch option
 
 The method described in this section is not the preferred manner to run
 patched rails, but may be used.  This method is mostly to ease MagLev
